--- a/MovementLib/Geerten.MovementLib.csproj
+++ b/MovementLib/Geerten.MovementLib.csproj
@@ -2,6 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <Authors>Geerten Vink</Authors>
+    <Description>Some movement helpers</Description>
+    <PackageIcon>MovementLib.jpg</PackageIcon>
+    <RepositoryUrl>https://github.com/genveir/Geertens-Shared-Stuff.git</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="MovementLib.jpg">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
