--- a/MovementLib/Geerten.MovementLib.csproj
+++ b/MovementLib/Geerten.MovementLib.csproj
@@ -6,7 +6,7 @@
     <Authors>Geerten Vink</Authors>
     <Description>Some movement helpers</Description>
     <PackageIcon>MovementLib.jpg</PackageIcon>
-    <RepositoryUrl>https://github.com/genveir/Geertens-Shared-Stuff.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/genveir/Geertens-Shared-Stuff</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
