wops, apparently this is required

--- a/MovementLib/Geerten.MovementLib.csproj
+++ b/MovementLib/Geerten.MovementLib.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <None Include="MovementLib.jpg">
       <Pack>True</Pack>
+      <PackagePath></PackagePath>
     </None>
   </ItemGroup>
 
