--- a/MovementLib/Geerten.MovementLib.csproj
+++ b/MovementLib/Geerten.MovementLib.csproj
@@ -1,19 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Version>0.0.5</Version>
-    <Authors>Geerten Vink</Authors>
-    <Description>Some movement helpers</Description>
-    <PackageIcon>MovementLib.jpg</PackageIcon>
-    <RepositoryUrl>https://github.com/genveir/Geertens-Shared-Stuff</RepositoryUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<Version>0.0.5</Version>
+		<Authors>Geerten Vink</Authors>
+		<Description>Some movement helpers</Description>
+		<PackageIcon>MovementLib.jpg</PackageIcon>
+		<RepositoryUrl>https://github.com/genveir/Geertens-Shared-Stuff</RepositoryUrl>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="MovementLib.jpg">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="MovementLib.jpg">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 </Project>
