--- a/.github/workflows/publishPackages.yml
+++ b/.github/workflows/publishPackages.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet test
 
     - name: Pack MovementLib
-      run: dotnet pack ./MovementLib/Geerten.Movement.csproj --configuration Release --output .
+      run: dotnet pack ./Movement/Geerten.Movement.csproj --configuration Release --output .
 
     - name: Push to Github
       run: dotnet nuget push *.nupkg --source ${{ secrets.NUGET_URL }} --api-key ${{secrets.GITHUB_TOKEN}} --skip-duplicate
